--- a/app/build.gradle
+++ b/app/build.gradle
@@ -20,7 +20,7 @@ apply plugin: 'kotlin-android'
 android {
     compileSdkVersion 28
     defaultConfig {
-        applicationId "com.example.android.dessertpusher"
+        applicationId "com.kitchen.android.dessertpusher"
         minSdkVersion 19
         targetSdkVersion 28
         versionCode 1
