--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,17 +15,17 @@
   -->
 
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.android.dessertpusher">
+    package="com.kitchen.android.dessertpusher">
 
     <application
-        android:name=".PusherApplication"
+        android:name="com.kitchen.android.dessertpusher.PusherApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_dessert_pusher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_dessert_pusher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity">
+        <activity android:name="com.kitchen.android.dessertpusher.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
